# testtask

./: Asteroid.cpp  Asteroid.h  Boom.cpp  Boom.h  CMakeLists.txt  Controller.cpp  Controller.h  Distribution.h  Gun.cpp  Gun.h  Missile.cpp  Missile.h  Model.cpp  Model.h  Observer.h  SpaceShip.cpp  SpaceShip.h  TimeController.cpp  TimeController.h  View.cpp  View.h  main.cpp
GameLogic/: Model.cpp  Model.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h
MathVariables/: Distribution.cpp  TimeController.cpp
Objects/: Boom.cpp  Missile.cpp  Missile.h
View/: View.cpp  View.h
